--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,31 @@
 
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 0;
+  background-color: #161616; /* Altere conforme necessário */
+}
+
+.logo-container {
+  width: 100%;
+  max-width: 150px; /* Altere conforme necessário */
+  padding: 0 20px;
+}
+
+.logo {
+  width: 100%;
+  height: auto;
+  display: block;
+}
 .container {
   position: relative;
   width: 100vw;
