--- a/css/style.css
+++ b/css/style.css
@@ -19,16 +19,19 @@ header {
 }
 
 .logo-container {
-  width: 100%;
-  max-width: 150px;
-  padding: 0 20px;
+  position: absolute;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  max-width: 100px;
 }
 
 .logo {
   width: 100%;
- 
-
+  height: auto;
+  display: block;
 }
+
 .container {
   position: relative;
   width: 100vw;
@@ -39,12 +42,14 @@ header {
   justify-content: center;
   background: #161616;
 }
+
 .slider {
   position: absolute;
   inset: 10px 50px 10px 10px;
   background: #222;
   border-radius: 20px;
 }
+
 .slider .slides {
   position: absolute;
   top: 60%;
@@ -61,6 +66,7 @@ header {
   justify-content: flex-start;
   align-items: flex-end;
 }
+
 .slides:nth-child(1),
 .slides:nth-child(2) {
   position: absolute;
@@ -71,28 +77,34 @@ header {
   transform: translateY(0);
   box-shadow: 0 25px 50px rgba(0, 0, 0, 0);
 }
+
 .slides:nth-child(3) {
   left: calc(50% + 260px);
   background-size: cover;
 }
+
 .slides:nth-child(4) {
   left: calc(50% + 480px);
   background-size: cover;
 }
+
 .slides:nth-child(5) {
   left: calc(50% + 700px);
   background-size: cover;
 }
+
 .slides:nth-child(6) {
   left: calc(50% + 1000px);
   background-size: cover;
 }
+
 .buttons {
   position: absolute;
   bottom: 15px;
   display: flex;
   gap: 20px;
 }
+
 .buttons span {
   position: relative;
   width: 50px;
@@ -104,6 +116,7 @@ header {
   justify-content: center;
   border-radius: 50%;
 }
+
 .buttons span::before {
   content: "";
   position: absolute;
@@ -113,12 +126,15 @@ header {
   border-right: 4px solid #fff;
   transform: rotate(225deg) translate(-4px, 4px);
 }
+
 .buttons span:nth-child(2)::before {
   transform: rotate(-315deg) translate(-4px, 4px);
 }
+
 .buttons span:active {
   opacity: 0.5;
 }
+
 .content {
   position: relative;
   padding: 40px;
@@ -130,15 +146,18 @@ header {
   opacity: 0;
   color: #fff;
 }
+
 .slides:nth-child(1) .content,
 .slides:nth-child(2) .content {
   opacity: 1;
   transition-delay: 0.5s;
 }
+
 h2 {
   font-size: 60px;
   font-weight: 600;
 }
+
 p {
   font-size: 18px;
 }
@@ -148,12 +167,14 @@ p {
     position: absolute;
     inset: 40px 40px 200px 40px;
   }
+
   .slider .slides {
     width: 100px;
     height: 100px;
     top: initial;
     bottom: -170px;
   }
+
   .slider .slides:nth-child(1),
   .slider .slides:nth-child(2) {
     top: initial;
@@ -161,32 +182,37 @@ p {
     width: 100%;
     height: 100%;
   }
+
   .slider .slides:nth-child(3) {
     left: 0;
   }
+
   .slider .slides:nth-child(4) {
     left: 120px;
   }
+
   .slider .slides:nth-child(5) {
     left: 240px;
   }
+
   .content {
     margin-bottom: 20px;
     max-width: 400px;
   }
+
   h2 {
     font-size: 30px;
   }
+
   p {
     font-size: 14px;
   }
 }
 
-.oft{
-
-   background-color: #222;
-   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif ;
-   color: aliceblue;
-   margin: 5%;
-   border: 50px;
+.oft {
+  background-color: #222;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  color: aliceblue;
+  margin: 5%;
+  border: 50px;
 }
